--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,17 @@
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<slf4j.version>1.6.6</slf4j.version>
 	</properties>
+	  <repositories>
+			<!-- ping++ -->
+			<repository>
+		    <snapshots>
+		        <enabled>false</enabled>
+		    </snapshots>
+		    <id>central</id>
+		    <name>bintray</name>
+		    <url>http://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -171,6 +182,14 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		
+		<!-- ping++ -->
+		<dependency>
+    <groupId>Pingplusplus</groupId>
+    <artifactId>pingpp-java</artifactId>
+    <version>2.0.7</version>
+    <type>jar</type>
+</dependency>
 
 	</dependencies>
 
